--- a/style.css
+++ b/style.css
@@ -71,3 +71,53 @@ img {
 .clear {
   clear: both;
 }
+
+
+/* Desktop First */
+@media screen and (max-width: 420px) {
+    * {
+	      box-sizing: border-box;
+	      margin: 0;
+	      padding: 0;
+    }
+
+    .container .row {
+         background-color: #f7eea0;
+         margin-top: 0px;
+         width: 430px;
+         font-weight: bold;
+    }
+
+      #steps .row>.left,
+      #steps .row>.central,
+      #steps .row>.right  {
+         background-color: #fffffb;
+         width: 430px;
+    }
+
+      #lezioni .row>.left,
+      #lezioni .row>.right {
+          width: 100%;
+          float: none;
+          padding-bottom: 10px;
+    }
+
+      #why .row img {
+           background-color: #428bca;
+           border-radius: 50%;
+           padding: 25px
+    }
+
+      img {
+           height: 120px;
+    }
+
+      #why .first .row .container .grey{
+          padding-bottom: 50px;
+          margin: 60px;
+    }
+
+       #why .row>.first, #why .row>.second, #why .row>.third {
+          width: 100%;
+          margin-top: 10px;
+          padding-bottom: 15px;
