--- a/style.css
+++ b/style.css
@@ -122,3 +122,8 @@ img {
           margin-top: 10px;
           padding-bottom: 15px;
     }
+
+
+        /* h1:first-child {
+          background-color: rgb(255, 255, 255);
+    } */
